# LatencyCalculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: 2021-01-01.json  2021-01-02.json  2021-01-03.json  2021-01-04.json  2021-01-05.json  2021-01-06.json  2021-01-08.json  2021-01-09.json  2021-01-10.json
src/: CMakeLists.txt
src/cpp/: DailyData.cpp  DataLoader.cpp  InterfaceController.cpp  LatencyCalculator.cpp  ServiceData.cpp  main.cpp  util.cpp
src/include/: DailyData.h  DataLoader.h  InterfaceController.h  LatencyCalculator.h  ServiceData.h  util.h
